--- a/src/shared/astro/Navigation.astro
+++ b/src/shared/astro/Navigation.astro
@@ -669,9 +669,9 @@ const Items = depth ? Fragment : "div";
       background-color: rgb(var(--header-background-color));
       clip-path: polygon(-200% -200%, 300% -200%, 300% 100%, -200% 100%);
 
-      // mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M512 512.002c0 141.385 114.616 256.001 256 256.001H0c141.385 0 256-114.616 256-256V127.938A127.94 127.94 0 0 1 383.937.001h.025A128.037 128.037 0 0 1 512 128.039z'/%3e%3c/svg%3e");
-      // mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M544 544.002c0 123.713 100.288 224.001 224 224.001H0c123.712 0 224-100.288 224-224V384.01a160.008 160.008 0 0 1 160.009-160.009A159.994 159.994 0 0 1 544 383.995z'/%3e%3c/svg%3e");
-      mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M576 576.003a192 192 0 0 0 192 192H0a192 192 0 0 0 192-192V384.005a192.004 192.004 0 0 1 192.004-192.003h.008a192 192 0 0 1 135.757 56.231A192 192 0 0 1 576 383.989z'/%3e%3c/svg%3e");
+      // mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M512 512.002c0 141.385 114.616 256.001 256 256.001H0c141.385 0 256-114.616 256-256V127.938A127.94 127.94 0 0 1 383.937.001h.025A128.037 128.037 0 0 1 512 128.039z'/%3e%3c/svg%3e");
+      // mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M544 544.002c0 123.713 100.288 224.001 224 224.001H0c123.712 0 224-100.288 224-224V384.01a160.008 160.008 0 0 1 160.009-160.009A159.994 159.994 0 0 1 544 383.995z'/%3e%3c/svg%3e");
+      mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 768 768'%3e%3cpath d='M576 576.003a192 192 0 0 0 192 192H0a192 192 0 0 0 192-192V384.005a192.004 192.004 0 0 1 192.004-192.003h.008a192 192 0 0 1 135.757 56.231A192 192 0 0 1 576 383.989z'/%3e%3c/svg%3e");
       mask-repeat: no-repeat;
     }
   }
