--- a/src/components/lightbox/lightbox.astro
+++ b/src/components/lightbox/lightbox.astro
@@ -82,6 +82,8 @@ const { collection } = Astro.props;
         return;
       }
       if (target.matches("[data-lightbox]")) return;
+      if (target.closest("figcaption, #lightbox")?.matches("figcaption"))
+        return;
       box.remove();
     });
 
@@ -131,7 +133,7 @@ const { collection } = Astro.props;
   });
 </script>
 
-<style is:global>
+<style is:global lang="scss">
   #lightbox .items > * {
     display: none;
     animation: lightbox-image 0.3s ease;
@@ -139,27 +141,35 @@ const { collection } = Astro.props;
     height: 100%;
     flex-direction: column;
     justify-content: center;
-    z-index: 2;
+    // z-index: 3;
   }
 
-  #lightbox .items .img-wrapper {
-    /* width: 100%; */
-    /* height: 100%; */
-    /* object-fit: contain; */
-    /* object-position: center; */
-    /* background-size: contain; */
-    flex: 1 1 100%;
-    height: 100%;
-  }
+  // #lightbox .items .img-wrapper {
+  //   /* width: 100%; */
+  //   /* height: 100%; */
+  //   /* object-fit: contain; */
+  //   /* object-position: center; */
+  //   /* background-size: contain; */
+  //   flex: 1 1 100%;
+  //   height: 100%;
+  // }
 
-  #lightbox .items .img-wrapper img {
-    height: 100%;
-    object-fit: contain;
-    object-position: center;
-  }
+  // #lightbox .items .img-wrapper img {
+  //   height: 100%;
+  //   object-fit: contain;
+  //   object-position: center;
+  // }
 
   #lightbox .items figure {
     position: relative;
+    // max-height: 100%;
+    flex: 1 1 auto;
+
+    img {
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   #lightbox .items figcaption {
@@ -170,6 +180,7 @@ const { collection } = Astro.props;
     /* height: 6rem; */
     margin: 2rem;
     flex: 0 0 0;
+    z-index: 3;
 
     --text-color: 255 255 255;
     --heading-color: 255 255 255;
@@ -231,11 +242,13 @@ const { collection } = Astro.props;
     0% {
       opacity: 0;
       transform: translate(50px, 0);
+      filter: blur(5px);
     }
 
     100% {
       opacity: 1;
       transform: translate(0, 0);
+      filter: blur(0);
     }
   }
 
@@ -243,11 +256,13 @@ const { collection } = Astro.props;
     0% {
       opacity: 0;
       transform: translate(-50px, 0);
+      filter: blur(5px);
     }
 
     100% {
       opacity: 1;
       transform: translate(0, 0);
+      filter: blur(0px);
     }
   }
 </style>
@@ -264,10 +279,11 @@ const { collection } = Astro.props;
 
   .items {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    max-height: 100%;
+    /* max-height: 100vh; */
   }
 
   .buttons {
