Fix image fit in lightboxes created by image

--- a/src/components/image/image.astro
+++ b/src/components/image/image.astro
@@ -84,6 +84,7 @@ const figcaption = title || description;
             alt=""
             loading="lazy"
             decoding="async"
+            fit="contain"
             q={80}
             placeholder={true}
           />
