Update header colors and padding

--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -73,6 +73,8 @@ const headerAreas =
       rgba(var(--header-background-color)),
       rgba(var(--header-background-color-bottom))
     );
+
+    padding: 0 calc(var(--indent) * 0.25);
   }
 
   header.pinned {
