--- a/src/shared/astro/Imgix.astro
+++ b/src/shared/astro/Imgix.astro
@@ -23,16 +23,16 @@ export interface Props {
   style?: string;
   /**
    * Set how the image is cropped by imgix - only applies if resizeFit = "crop"
-   * Defaults to "center"
-   *  For more information on cropping behaviour, see: https://docs.imgix.com/apis/rendering/size/crop
+   * @default "center"
+   * @see https://docs.imgix.com/apis/rendering/size/crop
    */
   crop?: cropOptions | `${cropOptions},${cropOptions}` | string;
   /** Set the images' object-fit in browser */
   fit?: "cover" | "contain";
   /**
    * Set how the image is resized by imgix
-   * Defaults to "crop"
-   * For more information on resize behaviour, see: https://docs.imgix.com/apis/rendering/size/fit
+   * @default "crop"
+   * @see https://docs.imgix.com/apis/rendering/size/fit
    */
   resizeFit?:
     | "clamp"
@@ -49,8 +49,8 @@ export interface Props {
   q?: number;
   /**
    * Set which automatic image optimisations imgix uses.
-   * Defaults to "compress,format"
-   * For more information on automatic optimisations, see: https://docs.imgix.com/apis/rendering/auto/auto
+   * @default "compress,format"
+   * @see https://docs.imgix.com/apis/rendering/auto/auto
    */
   auto?: string;
   /** Generate and attach a Low Quality Image Placeholder (LQIP) to the image */
