--- a/src/components/lightbox/lightbox.astro
+++ b/src/components/lightbox/lightbox.astro
@@ -107,7 +107,7 @@ const { collection } = Astro.props;
     });
   }
 
-  document.addEventListener("DOMContentLoaded", () => {
+  function setupLightbox() {
     const lightboxes = document.querySelectorAll("template.lightbox-template");
 
     lightboxes.forEach((lightbox) => {
@@ -130,7 +130,10 @@ const { collection } = Astro.props;
         showLightbox(lightbox, clicked.dataset.lightbox || "");
       });
     });
-  });
+  }
+
+  document.addEventListener("DOMContentLoaded", setupLightbox);
+  document.addEventListener("astro:after-swap", setupLightbox);
 </script>
 
 <style is:global lang="scss">
