Fix inconsistency in top and bottom column padding

--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -174,7 +174,8 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
 
   div.columns {
     gap: var(--column-gap);
-    padding: calc(var(--indent) * 0.5) var(--indent);
+    // padding: calc(var(--indent) * 0.5) var(--indent);
+    padding: var(--indent);
     background-color: rgb(var(--background-color));
   }
 
