Fix gallery collapse with new wrapper div

--- a/src/components/gallery/gallery.astro
+++ b/src/components/gallery/gallery.astro
@@ -154,7 +154,7 @@ const sizes = `(max-width: 768px) calc((100vw / 2) - (${
   }
 
   @media only screen and (max-width: 768px) {
-    section.gallery {
+    section.gallery .gallery-grid {
       grid-template-columns: repeat(calc(var(--columns) * 0.5), 1fr);
     }
 
