--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -20,14 +20,14 @@ const textColor = convertColorString(preferences.footer.foreground_color);
     )
   }
   {preferences.footer.show_socials && <Social />}
-  {
-    preferences.footer.show_top_button && (
-      <a href="#top">
-        Back to top
-      </a>
-    )
-  }
-  <p class="brand">Website by <a href="https://www.millstream.com.au/" target="_blank" rel="noopener noreferrer">Millstream Creative</a></p>
+  {preferences.footer.show_top_button && <a href="#top">Back to top</a>}
+  <p class="brand">
+    Website by <a
+      href="https://www.millstream.com.au/"
+      target="_blank"
+      rel="noopener noreferrer">Millstream Creative</a
+    >
+  </p>
 </section>
 
 <style>
@@ -41,6 +41,7 @@ const textColor = convertColorString(preferences.footer.foreground_color);
   }
 
   .copyright {
+    margin: 0;
     height: 100%;
     display: flex;
     align-items: center;
