Allow social widget to wrap

--- a/src/components/social/social.astro
+++ b/src/components/social/social.astro
@@ -55,6 +55,9 @@ const socials: Record<string, string>[] = preferences.general.social.map(
     color: var(--text-color);
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
+    row-gap: 0.5rem;
+
     // height: 100%;
     padding: 1rem;
     margin-top: 0;
