--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -195,7 +195,8 @@ h4,
 h5,
 h6 {
   margin: 0;
-  line-height: 1.7;
+  margin-bottom: 0.2em;
+  line-height: 1.6;
   font-family: var(--default-font-family);
   color: rgb(var(--heading-color));
   text-wrap: balance;
