--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -186,6 +186,51 @@ table th {
 
 table td {
   text-align: left;
+  padding: calc(var(--indent) * 0.1);
+}
+
+@media only screen and (max-width: 768px) {
+  table tbody {
+    display: flex;
+    flex-direction: column;
+    // gap: 1rem;
+  }
+  table tr {
+    display: flex;
+    flex-direction: column;
+    counter-reset: column;
+    border-bottom: 1px solid
+      color-mix(
+        in oklch,
+        rgb(var(--background-color)) 90%,
+        rgb(var(--text-color))
+      );
+
+    &:last-child {
+      border-bottom: 0;
+    }
+
+    td {
+      position: relative;
+      margin-left: 1em;
+    }
+
+    td::before {
+      position: absolute;
+      content: counter(column) ".";
+      counter-increment: column;
+      opacity: 0.5;
+      left: -1em;
+    }
+  }
+}
+
+tr:nth-child(even) {
+  background-color: color-mix(
+    in oklch,
+    rgb(var(--background-color)) 95%,
+    rgb(var(--text-color))
+  );
 }
 
 h1,
@@ -233,14 +278,6 @@ p {
   &:last-child {
     margin-bottom: 0;
   }
-}
-
-tr:nth-child(even) {
-  background-color: color-mix(
-    in oklch,
-    rgb(var(--background-color)) 95%,
-    rgb(var(--text-color))
-  );
 }
 
 ::selection {
