Icon fix for safari

--- a/src/shared/astro/icon.astro
+++ b/src/shared/astro/icon.astro
@@ -47,4 +47,8 @@ const iconData = iconToSVG(icon, { height });
   svg.rot270 {
     transform: rotate(270deg);
   }
+
+  svg {
+    overflow: visible;
+  }
 </style>
