--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -256,7 +256,7 @@ h6 {
   margin-top: 0;
 }
 
-:is(p, ul, ol, h1, h2, h3, h4, h5, h6):last-child {
+:is(p, ul, ol, h1, h2, h3, h4, h5, h6, table):last-child {
   margin-bottom: 0;
 }
 
