--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -33,7 +33,7 @@
   --header-background-color: 0 0 0 / 0.6;
   --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
-  // --header-height: 72px;
+  --header-height: 100px;
 
   --border-radius: 0.3rem;
 
