--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,6 +34,7 @@
   --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
   --header-height: 100px;
+  --header-offset-transparent: 0;
 
   --border-radius: 0.3rem;
 
@@ -147,6 +148,10 @@ section.no-indent {
 
 main {
   padding-top: var(--header-height);
+}
+
+main:has(:is(.image, .slider):first-child) {
+  padding-top: var(--header-offset-transparent);
 }
 
 form {
