Fix images to height correctly

--- a/src/shared/astro/Imgix.astro
+++ b/src/shared/astro/Imgix.astro
@@ -179,7 +179,7 @@ let placeholderString = `data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000
 <style>
   img {
     max-width: 100%;
-    height: auto;
+    height: 100%;
     /* object-position: 9999px !important; */
     background-position: center;
     background-size: cover;
