--- a/src/components/image/image.astro
+++ b/src/components/image/image.astro
@@ -112,6 +112,13 @@ const figcaption = title || description;
     height: 100%;
     object-fit: cover;
   } */
+
+  figure {
+    overflow: hidden;
+    /* max-height: 100%; */
+    height: 100%;
+    width: 100%;
+  }
 </style>
 
 <style lang="scss" is:global>
