--- a/src/shared/astro/Navigation.astro
+++ b/src/shared/astro/Navigation.astro
@@ -174,7 +174,7 @@ const Items = depth ? Fragment : "div";
      * Open the dropdown of the target element
      * @param target element to open the dropdown of
      */
-    function openNav(target: HTMLElement) {
+    function openNav(target: FloatingUIElement) {
       // Close all dropdowns that do not contain the new dropdown
       closeAllNav(target, true);
 
@@ -234,7 +234,6 @@ const Items = depth ? Fragment : "div";
             ],
           };
 
-      // @ts-ignore
       target._cleanup = autoUpdate(target, dropdown, () => {
         computePosition(target, dropdown, options).then(
           ({ x, y, middlewareData, placement }) => {
